--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   </div>
 
   <div id="footer">
+    <div id="line"></div>
     <a 
       href="https://instagram.com/williamnogue">
         Instagram
