--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <div id="footer">
     <div id="line"></div>
     <a 
+      target="_blank"
       href="https://instagram.com/williamnogue">
         Instagram
     </a>
